Fixed visibility on Mobile.

--- a/style.css
+++ b/style.css
@@ -115,7 +115,9 @@ body{
     from { opacity: 0; }
     to   { opacity: 1; }
 }
-
+#navListMobile > a{
+    visibility: hidden;
+}
 .navItem, #name, #email{
     color:white;
     font-size:1.25rem;
